# EchoMind

./: .gitignore  CLAUDE.md  ReadMe.md  license  plan.md
config/api/: api.env
config/authentik/: README.md
config/connector/: connector.env
config/embedder/: embedder.env
config/ingestor/: ingestor.env
config/migration/: migration.env
config/minio/: README.md
config/nats/: nats-server.conf
config/orchestrator/: orchestrator.env
config/postgres/: init-db.sql
config/qdrant/: production.yaml
deployment/: INSTALLATION-README.md  echomind-install.conf.template  install-echomind-server.sh
deployment/docker-cluster/: .env.example  .env.host  QUICKSTART.md  README-ENV.md  README.md  cluster.sh  deploy-host.sh  docker-compose-host.yml  docker-compose-langfuse-host.yml  docker-compose-langfuse.yml  docker-compose-observability.yml  docker-compose.yml
docs/: api-spec.md  architecture.md  cloud-sizing.md  database-schema.md  langfuse-setup.md  nats-messaging.md  resource-requirements.md  rules.md
docs/agents/: moltbot-architecture-summary.md  pi-agent-core-architecture.md  (+1 more)
scripts/: fix-postgres-password.sh  generate_proto.sh
src/migration/: .env.example  Dockerfile  __init__.py  alembic.ini  config.py  main.py  pyproject.toml
src/migration/migrations/: env.py
src/migration/migrations/versions/: .gitkeep  20260203_010000_normalize_llm_providers.py  20260206_010000_seed_default_llm.py  20260206_140000_timestamp_to_timestamptz.py  20260207_010000_add_google_credentials.py  20260210_033000_normalize_connector_types.py
tests/: __init__.py  conftest.py
(+231 files in other folders)
